@@ -2,16 +2,16 @@ package com.gridnine.testing;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
-public class FlightFilterDepartingInPast {
-    public class FlightFilterDepartingInPast implements FlightFilter {
+public class FlightFilterDepartingInPast implements FlightFilter {
         @Override
         public List<Flight> filter(List<Flight> flights) {
             System.out.println("Filter departing in the past");
             return flights
                     .stream()
                     .filter(flight -> checkDepartInThePast(flight.getSegments()))
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         private boolean checkDepartInThePast(List<Segment> segments) {
@@ -19,5 +19,4 @@ public class FlightFilterDepartingInPast {
                     .stream()
                     .allMatch(segment -> segment.getDepartureDate().isAfter(LocalDateTime.now()));
         }
-    }
 }
